--- a/style.css
+++ b/style.css
@@ -4,9 +4,27 @@
   box-sizing: border-box;
 }
 
+body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px 500px 140px 500px 490px 100px 35px;
+}
+
 #vorlage {
   position: fixed;
   top: 0px;
   left: 0px;
   opacity: 0.4;
+}
+
+nav {
+  grid-area: 1 / 2 / 2 / 1;
+}
+
+nav ul {
+  grid-area: 2 / 2 / 3 / 1;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-left: 190px;
 }
